loadBalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-hw
spec:
  ports:
    - port: 8000
      targetPort: 8000
  type: LoadBalancer
  selector:
    app: java-hw
