nodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-hw-np
spec:
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30070
  type: NodePort
  selector:
    app: java-hw
