postgres-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: kiran-nagp-ns
spec:
  serviceName: postgres-db-headless
  selector:
    matchLabels:
      app: postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:14
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: gcp-disk-pvc
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: gcp-disk-pvc
          persistentVolumeClaim:
            claimName: gcp-disk-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-db-headless
  namespace: kiran-nagp-ns
  labels:
    app: postgres
spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
    - protocol: TCP
      name: https
      port: 5432
      targetPort: 5432
