books-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: books-service-api
  namespace: kiran-nagp-ns
  labels:
    app: books-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: books-service
  template:
    metadata:
      labels:
        app: books-service
    spec:
      containers:
        - name: books-service
          image: kiranbabun/books-service:latest
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: books-service
  namespace: kiran-nagp-ns
spec:
  ports:
    - port: 8000
      targetPort: 8000
  type: LoadBalancer
  selector:
    app: books-service
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-ingress-service
  namespace: kiran-nagp-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /v1/books-service(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: books-service
                port:
                  number: 8000
